# snowball

./: .gitignore  CMakeLists.txt
compiler/: CMakeLists.txt
csharp/snowball_stemmer/: snowball_stemmer.sln
csharp/snowball_stemmer/snowball_stemmer/: Program.cs
csharp/snowball_stemmer/snowball_stemmer/Algorithms/: en.cs
examples/en/: CMakeLists.txt  en.cc  en.h  main.cc
runtime/: CMakeLists.txt
